--- a/radar_charts2.Rmd
+++ b/radar_charts2.Rmd
@@ -61,7 +61,7 @@ data<-
 
 ```{r}
 create_beautiful_radarchart <- function(data, color = "#00AFBB", 
-                                        vlabels = colnames(data), vlcex = 0.7,
+                                        vlabels = colnames(data), vlcex = 0.3,
                                         caxislabels = NULL, title = NULL, ...){
   radarchart(
     data, axistype = 1,
@@ -80,9 +80,53 @@ create_beautiful_radarchart <- function(data, color = "#00AFBB",
 
 ## **Basic radar plot**
 
-Plot the data for student 1
+Plot the data for one project
 
 ```{r}
 first_row <- data %>% slice(1:3)
 create_beautiful_radarchart(first_row)
+```
+
+Reduce plot margin using par()
+
+```{r}
+op <- par(mar = c(0, 0, 0, 0))
+create_beautiful_radarchart(first_row, caxislabels = c(-2, -1, 0, 1, 2))
+par(op)
+```
+
+Create separated spider charts for each project.
+First a trial for 3 projects.
+
+```{r}
+# get data
+three_rows <- data %>% slice(1:5)
+
+# Define colors and titles
+colors <- c("#00AFBB", "#E7B800", "#FC4E07")
+titles <- c("Project.1", "Project.2", "Project.3","Project.4", "Project.5", "Project.6")
+
+# if we want to produce an output uncomment the line below and the line at the end of this chunk.
+# png(filename = "output/charts_par_0303_1111_mfrow_32.png", width = 4.2, height = 5.94, units = "in", res = 1450)
+
+# Reduce plot margin using par()
+# Split the screen in 3 parts
+op <- par(mar = c(0, 2, 2, 2))
+op <- par(oma = c(1, 1, 1, 1))
+par(mfrow = c(3,2))
+
+# Create the radar chart
+for(i in 1:6){
+  create_beautiful_radarchart(
+    data = data %>% slice(1,2,i+2), 
+    caxislabels = c(-2, -1, 0, 1, 2),
+    color = "#00AFBB", 
+    title = titles[i],
+    vlcex = 0.5
+    )
+}
+par(op)
+
+# if we want to produce an output uncomment the line below and the line starting with png.
+# dev.off()
 ```
